--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Gowtham
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Blog post for the paper "Calibrate Before Use to  Improve Few-Shot Performance of Language Models" 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
