--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # This file contains configuration flags to customize your site
 #
 # Name of your site (displayed in the header)
-name: Gowtham
+name: GowthamKrishna Addluri
 # Short bio or description (displayed in the header)
-description: Blog post for the paper "Calibrate Before Use to  Improve Few-Shot Performance of Language Models" 
+description: Blog post for Learning with limited data in NLP seminar
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 
